--- a/ESR/intro.tex
+++ b/ESR/intro.tex
@@ -9,4 +9,4 @@ In the recent paper ``The Statistical Finite Element Method" \textcolor{blue}{\c
 
 Our work aims to provide more detailed error analysis explicitly quantifying the extent by which the distributions obtained using the ``true" solution and the FEM solution differ. Once this is investigated we will then explore how this propagates through to any further inference. To be more specific, we will consider placing two different priors for any further inference. The first prior we will consider will be the distribution obtained using the true solution operator of the PDE. The second prior will be that obtained using the FEM solution. In the case of Gaussian forcing, and under suitable conditions which will be specified, these two priors are both Gaussian measures on appropriate function spaces. We will aim to investigate how these priors differ by utilising the Wasserstein distance between probability measures. In particular, we will obtain an upper-bound for this distance by utilising a connection between the Wasserstein distance and the Procrustes Metric on covariance operators. Having investigated this discrepancy between the priors we will then investigate how this translates to a discrepancy in the subsequent posteriors obtained using observational data. Our treatment aims to follow the guiding principle of ``\textit{avoiding discretization until the the last possible moment}" \textcolor{blue}{\cite{stuart2010inverse}}. This principle is a very powerful one used throughout numerical analysis, and we will aim to highlight its importance in our work.
 
-The remainder of the report is structured as follows. Section \textcolor{blue}{\ref{lit_review}} provides a concise account of the most relevant background material for the project together with a brief survey of the literature behind the topic of this work. In Section \textcolor{blue}{\ref{general_framework}} we introduce the general framework we will be considering. We then apply the general framework in the context of FEM for an elliptic boundary value problem in Section \textcolor{blue}{\ref{elliptic_bv_prob}} and then to a parabolic problem in Section \textcolor{blue}{\ref{parabolic_prob}}. Section \textcolor{blue}{\ref{conclusion}} finally discusses in more general terms the aims of our research before outlining several ideas for future work.
+The remainder of the report is structured as follows. Section \textcolor{blue}{\ref{lit_review}} provides a concise account of the most relevant background material for the project together with a brief survey of the literature behind the topic of this work. In Section \textcolor{blue}{\ref{general_framework}} we introduce the general framework we will be considering. We then apply the general framework in the context of FEM for an elliptic boundary value problem in Section \textcolor{blue}{\ref{elliptic_bv_prob}}. Section \textcolor{blue}{\ref{conclusion}} finally discusses in more general terms the aims of our research before outlining several ideas for future work.
