--- a/ESR/main.tex
+++ b/ESR/main.tex
@@ -87,10 +87,13 @@
 
 \section{Conclusions and Research Plan}
 \label{conclusion}
+\input{conclusions.tex}
+
+\bibliography{references.bib}
 
 \section{Appendix}
 \label{appendix}
+\input{appendix.tex}
 
-\bibliography{references.bib}
 % \bibliographystyle{unsrt}
 \end{document}
