--- a/ESR/elliptic_bvp.tex
+++ b/ESR/elliptic_bvp.tex
@@ -1,4 +1,4 @@
-AAIn this section we will focus on the following standard elliptic stationary conductivity problem:
+In this section we will focus on the following standard elliptic stationary conductivity problem:
 \begin{align}
     \label{standard_conduct}
     \begin{split}
@@ -82,13 +82,13 @@ thus we see that we can write:
 i.e. $V=\Phi^{*}\Lambda\mathcal{I}$. \vspace{10pt}
 
 \begin{remark}
-    It will also prove useful later to notice that $\Phi^{*}$ is actually the same operator as $\mathcal{I}^{*}$. To see this we note that $\Phi^{*}:\mathbb{R}^{J}\rightarrow H_{0}^{1}(\Omega)$ is given by:
+    It will also prove useful later to notice that $\Phi^{*}$ is actually the same operator as $\mathcal{I}^{*}$. To see this we note that $\Phi^{*}:\mathbb{R}^{J}\rightarrow H_{0}^{1}(\Omega)$ is defined by:
     \begin{equation}
         \Phi^{*}\mathbf{v}:=\sum_{i=1}^{J}v_{i}\phi_{i}
     \end{equation}
-    where the vector $\mathbf{v}$ has components $v_{i}, \hspace{0.25cm} i=1,\dots,J$. Thus, $\Phi$, the adjoint of $\Phi^{*}$ is a mapping from $H^{-1}(\Omega)\rightarrow\mathbb{R}^{J}$ which is determined by the relation:
+    where the vector $\mathbf{v}$ has components $v_{i}, \hspace{0.1cm} i=1,\dots,J$. Thus, $\Phi$, the adjoint of $\Phi^{*}$ is a mapping from $H^{-1}(\Omega)\rightarrow\mathbb{R}^{J}$ which is determined by the relation:
     \begin{equation}
-        \langle u,\Phi^{*}\mathbf{v}\rangle = \left(\Phi u,\mathbf{v}\right) \hspace{0.25cm} \forall u\in\ H^{-1}(\Omega) \hspace{0.1cm} \forall \mathbf{v}\in\mathbb{R}^{J}
+        \langle u,\Phi^{*}\mathbf{v}\rangle = \left(\Phi u,\mathbf{v}\right) \hspace{0.25cm} \forall u\in H^{-1}(\Omega) \hspace{0.1cm} \forall \mathbf{v}\in\mathbb{R}^{J}
     \end{equation}
     where $(\boldsymbol{\cdot},\boldsymbol{\cdot})$ is the standard inner product in $\mathbb{R}^{J}$. Using this equation it is a simple matter to show that $\Phi=\mathcal{I}$ and so $\Phi^{*}=\mathcal{I}^{*}$ as claimed. We can thus also express $V$ as $V=\mathcal{I}^{*}\Lambda\mathcal{I}=\Phi^{*}\Lambda\Phi$.
     $\mathbin{\blacklozenge}$
@@ -154,9 +154,9 @@ As discussed in Section \textcolor{blue}{\ref{prior_true_solution}} provided tha
 
 For the BVP under consideration (\ref{standard_conduct}) the following assumptions on $\Omega$ and its boundary $\partial\Omega$ will prove to be sufficient for our purposes here:
 
-\noindent \textbf{Assumption 3 } $\Omega$ is a bounded, convex polygonal \footnote{The polygonal assumption can easily be relaxed but we assume it here for simplicity.} domain whose boundary $\partial\Omega$ is thus a piecewise smooth curve.
+\noindent \textbf{Assumption 3 } $\Omega$ is a bounded, convex polygonal\footnote{The polygonal assumption can easily be relaxed but we assume it here for simplicity.} domain whose boundary $\partial\Omega$ is thus a piecewise smooth curve.
 
-Under this assumption on the domain and its boundary we have that the solution operator $\mathcal{L}^{-1}$ to the BVP is indeed bounded and so the ``true" prior can indeed be taken to be the Gaussian (\ref{true_prior_elliptic}). We now move on to quantifying how different the approximate prior (\ref{approximate_fem_prior}) and the true prior (\ref{true_prior_elliptic}) are.
+Under this assumption on the domain and its boundary we have that the solution operator $\mathcal{L}^{-1}$ to the BVP is indeed bounded and so the ``true" prior can be taken to be the Gaussian (\ref{true_prior_elliptic}). We now move on to quantifying how different the approximate prior (\ref{approximate_fem_prior}) and the true prior (\ref{true_prior_elliptic}) are.
 
 \subsection{Upperbound on the Wasserstein Distance between the two priors}
 
@@ -204,11 +204,24 @@ For our particular case, as mentioned previously, we will consider the underlyin
 \begin{equation}
     W^{2}(\nu_1,\nu_2)=\|m_1-m_2\|_{L^{2}(\Omega)}^{2}+W^{2}(\mathcal{N}(0,\Sigma_1),\mathcal{N}(0,\Sigma_2))
 \end{equation}
-where now the $m_{i},\Sigma_{i}, i=1,2$ are given by equations (\ref{true_fem_mean}-\ref{approx_fem_cov}). We now go about obtaining an upperbound on each of these two terms. We want to control each term by the FEM mesh size $h$. For brevity we will now assume that $\Omega\subset\mathbb{R}^2$ so we have a 2-dimensional problem. The analysis follows in almost exactly the same way for $\mathbb{R}^{d}$. We will assume that $\Omega$ satisfies Assumption 3. The convexity asssumption gives us that the $H^{2}(\Omega)$ norm of the variational solution of our PDE is controlled by the $L^2$ norm of the RHS. WE now take our FEM mesh to be a triangulation of $\Omega$ with $H$ being the maximum side length of any triangle in the triangulation. We require a further technical assumption:
+where now the $m_{i},\Sigma_{i}, i=1,2$ are given by equations (\ref{true_fem_mean}-\ref{approx_fem_cov}). We now go about obtaining an upperbound on each of these two terms. We want to control each term by the FEM mesh size $h$. For brevity we will now assume that $\Omega\subset\mathbb{R}^2$ so we have a 2-dimensional problem. The analysis follows in almost exactly the same way for $\mathbb{R}^{d}$. We will assume that $\Omega$ satisfies Assumption 3. The convexity asssumption gives us that the $H^{2}(\Omega)$ norm of the variational solution of our PDE is controlled by the $L^2$ norm of the RHS. We now take our FEM mesh to be a triangulation of $\Omega$ with $h$ being the maximum side length of any triangle in the triangulation. We require a further technical assumption:
 
 \noindent \textbf{Assumption 4 } The meshes under consideration remain regular in the sense that as we refine the mesh by decreasing $h$ to 0 the angles of all triangles are bounded below independently of $h$.
 
-Since $m_1=\mathcal{L}^{-1}\bar{f}$ is the solution to the following elliptic BVP:
+Under all of these assumptions we have the following Theorem:
+\vspace{10pt}
+
+\begin{theorem}
+    \label{prior_distance_bound}
+    Let $u$ satisfy (\ref{standard_conduct}). Assuming that Assumptions 2-4 hold we have that the Wasserstein distance between the two priors $\nu_1,\nu_2$ is bounded above by $\mathcal{O}(h)$ as $h\rightarrow 0$. In particular, there exists a constant $\gamma>0$, independent of $h$, such that the following holds:
+    \begin{equation}
+        \label{bound_on_distance}
+        W(\nu_{1},\nu_{2})\leq \gamma h +\mathcal{O}(h^2)
+    \end{equation}
+    Furthermore, we observe that as $h\rightarrow 0$ the approximate FEM prior $\nu_2$ converges in distribution to the true prior $\nu_1$.
+\end{theorem}
+
+\noindent \textit{Proof:} Since $m_1=\mathcal{L}^{-1}\bar{f}$ is the solution to the following elliptic BVP:
 \begin{align*}
     -\nabla\cdot(a(x)\nabla v(x)) &= \bar{f}(x), \hspace{0.2cm} x\in\Omega \\
     v &= 0, \hspace{0.2cm} x\in\partial\Omega
@@ -272,14 +285,29 @@ Combining (\ref{bound_on_diff_means}) and (\ref{bound_on_diff_cov_operators}) we
 
 We thus have an upper bound on the Wasserstein distance between $\nu_{1},\nu_{2}$ in terms of the FEM mesh size $h$:
 \begin{equation}
-    \label{bound_on_distance}
     W(\nu_{1},\nu_{2})\leq h \sqrt{2\tilde{C}\|K\|_{1}\|\mathcal{L}^{-1}\|_{\infty}+\mathcal{O}(h^2)}\leq \gamma h +\mathcal{O}(h^2)
 \end{equation}
-where $\gamma:=\sqrt{2\tilde{C}\|K\|_{1}\|\mathcal{L}^{-1}\|_{\infty}}>0$ is a constant. Note that we have also used that both\footnote{$K$ is trace-class since it is a covariance operator and thus its trace-norm is bounded.} $\|K\|_{1}$ and $\|\mathcal{L}^{-1}\|_{\infty}$ are bounded and independent of $h$. We also see that as $h\rightarrow 0$ the Wasserstein distance between $\nu_1,\nu_2$ goes to 0 and so the approximate prior converges (in distribution) to the true prior as $h\rightarrow 0$ (see Proposition 4 in \textcolor{blue}{\cite{masarotto2019procrustes}}). Having obtained this upperbound on the distance between the true priors we are now in a position to investigate how this ``propagates" forwards to further inference. In particular, we will now look at incorporating sensor data and seeing how different the two resulting posteriors are from using the two different priors $\nu_1,\nu_2$ above.
+where $\gamma:=\sqrt{2\tilde{C}\|K\|_{1}\|\mathcal{L}^{-1}\|_{\infty}}>0$ is a constant. Note that we have also used that both\footnote{$K$ is trace-class since it is a covariance operator and thus its trace-norm is bounded.} $\|K\|_{1}$ and $\|\mathcal{L}^{-1}\|_{\infty}$ are bounded and independent of $h$. We also see that as $h\rightarrow 0$ the Wasserstein distance between $\nu_1,\nu_2$ goes to 0 and so the approximate prior converges (in distribution) to the true prior as $h\rightarrow 0$ (see Proposition 4 in \textcolor{blue}{\cite{masarotto2019procrustes}}).
+$\mathbin{\blacklozenge}$
+
+Having obtained this upperbound on the distance between the true priors we are now in a position to investigate how this ``propagates" forwards to further inference. In particular, we will now look at incorporating sensor data and seeing how different the two resulting posteriors are from using the two different priors $\nu_1,\nu_2$ above.
 
 \subsection{Upperbound on the Wasserstein Distance between the two posteriors}
 
-As discussed in Section \textcolor{blue}{\ref{incorporating_obs_data}} we will now assume that we have noisy observations of the value of $u$ at some points $y_1,\dots,y_s\in\Omega$ coming from a sensor. We wish to update our belief in the distribution of $u$ using this sensor data, and as discussed either of the $\nu_i$ can be used as prior distributions. We thus obtain two different posteriors and these are given by $u|\mathbf{v}\sim\mathcal{N}(m^{(i)}_{u|\mathbf{v}},\Sigma^{(i)}_{u|\mathbf{v}})$ where $m^{(i)}_{u|\mathbf{v}}:=m_{i}+\Sigma_{i}S^{*}B_{i}^{-1}(\mathbf{v}-Sm_{i})$ and $\Sigma^{(i)}_{u|\mathbf{v}}:=\Sigma_{i}-\Sigma_{i}S^{*}B_{i}^{-1}S\Sigma_{i}$ as shown in Section \textcolor{blue}{\ref{incorporating_obs_data}}. We have denoted $B_{i}:=\epsilon^{2}I+S\Sigma_{i}S^{*}$ for convenience. We can no go about obtaining an upperbound for the Wasserstein distance between these two posteriors. We have,
+As discussed in Section \textcolor{blue}{\ref{incorporating_obs_data}} we will now assume that we have noisy observations of the value of $u$ at some points $y_1,\dots,y_s\in\Omega$ coming from a sensor. We wish to update our belief in the distribution of $u$ using this sensor data, and as discussed either of the $\nu_i$ can be used as prior distributions. We thus obtain two different posteriors and these are given by $u|\mathbf{v}\sim\mathcal{N}(m^{(i)}_{u|\mathbf{v}},\Sigma^{(i)}_{u|\mathbf{v}})$ where $m^{(i)}_{u|\mathbf{v}}:=m_{i}+\Sigma_{i}S^{*}B_{i}^{-1}(\mathbf{v}-Sm_{i})$ and $\Sigma^{(i)}_{u|\mathbf{v}}:=\Sigma_{i}-\Sigma_{i}S^{*}B_{i}^{-1}S\Sigma_{i}$ as shown in Section \textcolor{blue}{\ref{incorporating_obs_data}}. We have denoted $B_{i}:=\epsilon^{2}I+S\Sigma_{i}S^{*}$ for convenience. We can no go about obtaining an upperbound for the Wasserstein distance between these two posteriors. The result is given in the following Theorem and we outline a proof of this.
+\vspace{10pt}
+
+\begin{theorem}
+    \label{posterior_difference_bound}
+    Let $u$ satisfy (\ref{standard_conduct}). Assuming that Assumptions 2-4 hold we have that the Wasserstein distance between the two posteriors is bounded above by $\mathcal{O}(h)$ as $h\rightarrow 0$. In particular, there exists a constant $\kappa>0$, independent of $h$, such that the following holds:
+    \begin{equation}
+        \label{post_bound}
+        W\left(\mathcal{N}(m^{(1)}_{u|\mathbf{v}},\Sigma^{(1)}_{u|\mathbf{v}}),\mathcal{N}(m^{(2)}_{u|\mathbf{v}},\Sigma^{(2)}_{u|\mathbf{v}})\right)\leq\sqrt{\kappa} h + \mathcal{O}(h^2)
+    \end{equation}
+    Furthermore, we observe that as $h\rightarrow 0$ the second posterior obtained using the prior $\nu_2$ converges in distribution to the first posterior obtained using the prior $\nu_1$.
+\end{theorem}
+
+\noindent \textit{Proof:} We have,
 \begin{align*}
     W^{2}\left(\mathcal{N}(m^{(1)}_{u|\mathbf{v}},\Sigma^{(1)}_{u|\mathbf{v}}),\mathcal{N}(m^{(2)}_{u|\mathbf{v}},\Sigma^{(2)}_{u|\mathbf{v}})\right)&=\|m^{(1)}_{u|\mathbf{v}}-m^{(2)}_{u|\mathbf{v}}\|_{L^{2}(\Omega)}^{2}+W^{2}\left(\mathcal{N}(0,\Sigma^{(1)}_{u|\mathbf{v}}),\mathcal{N}(0,\Sigma^{(2)}_{u|\mathbf{v}})\right) \\
     &\leq \|m^{(1)}_{u|\mathbf{v}}-m^{(2)}_{u|\mathbf{v}}\|_{L^{2}(\Omega)}^{2} + \|\Sigma^{(1)}_{u|\mathbf{v}}-\Sigma^{(2)}_{u|\mathbf{v}}\|_{1}
@@ -322,6 +350,4 @@ where $\kappa>0$ is a constant independent of $h$. Combining these two upper bou
     W^{2}\left(\mathcal{N}(m^{(1)}_{u|\mathbf{v}},\Sigma^{(1)}_{u|\mathbf{v}}),\mathcal{N}(m^{(2)}_{u|\mathbf{v}},\Sigma^{(2)}_{u|\mathbf{v}})\right)\leq\kappa h^{2} + \mathcal{O}(h^4)
 \end{equation}
 and so the Wasserstein distance between the posteriors is bounded above by $\mathcal{O}(h)$ and thus goes to $0$ as $h\rightarrow 0$. Thus, the posterior obtained using the approximate prior converges in distribution to the posterior obtained using the true prior as the mesh size goes to 0.
-
-
-\clearpage
+$\mathbin{\blacklozenge}$
